--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -16,7 +16,7 @@ jobs:
         DOCKER_PASSWORD: ${{ secrets.PASSWORD }}
     - uses: actions/checkout@v2
     - name: Build the Docker image
-      run: |
+    - run: |
           echo ${{ secrets.DOCKER_PASSWORD }} | docker login -u ${{ secrets.DOCKER_USERNAME }} --password-stdin
           if [[ $? == 0 ]]; then
             tag=nightly-$(date '+%Y%m%d')
