--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -5,22 +5,34 @@ on:
     branches: [ api_cli ]
 
 jobs:
-
   build:
-
+    name: Build
     runs-on: ubuntu-latest
-
+    env:
+      GO111MODULE: on
     steps:
-    - name: Build the Docker image
-      env: 
-        DOCKER_USERNAME: ${{ secrets.RUNKECHENG }}
-        DOCKER_PASSWORD: ${{ secrets.PASSWORD }}
-      run: |
-          echo ${{ secrets.DOCKER_PASSWORD }} | docker login -u ${{ secrets.DOCKER_USERNAME }} --password-stdin
-          if [[ $? == 0 ]]; then
-            tag=nightly-$(date '+%Y%m%d')
-            REPO=runkecheng 
-            docker build -t . --file Dockerfile --tag ${REPO}/mysql-operator:${tag}
-          else
-            exit -1
-          fi
+      - name: Check out code into the Go module directory
+        uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
+
+      - name: "Set up QEMU"
+        uses: docker/setup-qemu-action@v1
+        with:
+          platforms: all
+
+      - name: "Set up Docker buildx"
+        uses: "docker/setup-buildx-action@v1"
+      - name: Build the Docker image
+        env: 
+          DOCKER_USERNAME: ${{ secrets.RUNKECHENG }}
+          DOCKER_PASSWORD: ${{ secrets.PASSWORD }}
+        run: |
+            echo ${{ secrets.DOCKER_PASSWORD }} | docker login -u ${{ secrets.DOCKER_USERNAME }} --password-stdin
+            if [[ $? == 0 ]]; then
+              tag=nightly-$(date '+%Y%m%d')
+              REPO=runkecheng 
+              docker build -t . --file Dockerfile --tag ${REPO}/mysql-operator:${tag}
+            else
+              exit -1
+            fi
