--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -32,7 +32,7 @@ jobs:
         run: |
             echo ${{ secrets.DOCKER_PASSWORD }} | docker login -u ${{ secrets.DOCKER_USERNAME }} --password-stdin
             if [[ $? == 0 ]]; then
-              tag=nightly-$(date '+%Y%m%d')
+              tag=test-$(date '+%Y%m%d')
               REPO=runkecheng 
               docker build . --file Dockerfile --tag ${REPO}/mysql-operator:${tag}
             else
