--- a/.github/workflows/code_check.yml
+++ b/.github/workflows/code_check.yml
@@ -35,3 +35,16 @@ jobs:
 
     - name: check crd
       run: diff charts/mysql-operator/crds config/crd/bases
+      
+  golint:
+    runs-on: ubuntu-latest
+    steps:
+    - name: Set up Go
+      uses: actions/setup-go@v2
+      with:
+        go-version: 1.16
+
+    - name: Check out source code
+      uses: actions/checkout@v1
+    - name: go lint
+      uses: Jerome1337/golint-action@v1.0.2
