*: Save Xenon's metadata to persistent storage. #406
Revert "Merge pull request #413 from runkecheng/save_xenon_metadata"

This reverts commit a6386c7b821534527679aa60cece1d9726a1c06e, reversing
changes made to f6932c6027d0d7a4b7ec51af97816f84e7eb24a1.

Subpath does not work in some environments, so we decided to share DATA storage volumes directly.

--- a/hack/xenon/Dockerfile
+++ b/hack/xenon/Dockerfile
@@ -22,11 +22,11 @@ FROM alpine:3.13
 RUN set -ex \
     && addgroup -g 1001 mysql && adduser -u 1001 -g 1001 -S mysql \
     && apk add --no-cache curl bash jq \
-    && mkdir -p /etc/xenon /var/lib/xenon /lib64 \
+    && mkdir -p /etc/xenon /lib64 \
     && ln -s /lib/libc.musl-x86_64.so.1 /lib64/ld-linux-x86-64.so.2 \
     && echo "/etc/xenon/xenon.json" > /config.path \
     # allow to change config files
-    && chown -R 1001:1001 /etc/xenon /var/lib/xenon
+    && chown -R 1001:1001 /etc/xenon
 
 COPY --from=builder /go/src/github.com/radondb/xenon/bin/xenon /usr/local/bin/xenon
 COPY --from=builder /go/src/github.com/radondb/xenon/bin/xenoncli /usr/local/bin/xenoncli
@@ -34,7 +34,7 @@ COPY --from=builder /go/src/github.com/radondb/xenon/bin/xenoncli /usr/local/bin
 USER 1001
 WORKDIR /
 EXPOSE 8801
-VOLUME ["/var/lib/xenon", "/etc/xenon"]
+VOLUME ["/etc/xenon"]
 
 ENTRYPOINT ["xenon"]
 CMD ["-c", "/etc/xenon/xenon.json"]
