--- a/.github/workflows/publish_charts.yml
+++ b/.github/workflows/publish_charts.yml
@@ -64,7 +64,7 @@ jobs:
 
       - name: Update charts index
         run: |
-          helm repo index --url https://radondb.github.io/radondb-mysql-kubernetes/ --merge index.yaml .
+          helm repo index --url https://runkecheng.github.io/radondb-mysql-kubernetes/ --merge index.yaml .
           git add .
 
       - name: Check diffs
