--- a/.github/workflows/publish_release.yml
+++ b/.github/workflows/publish_release.yml
@@ -2,15 +2,22 @@ name: Publish release
 
 on:
   workflow_dispatch:
+    inputs:
+      version:
+        description: 'Release version'
+        required: false 
+        type: string
 
 jobs: 
     update_release_draft:
-      uses: radondb/radondb-mysql-kubernetes/.github/workflows/release_drafter.yml@main
+      uses: runkecheng/radondb-mysql-kubernetes/.github/workflows/release_drafter.yml@main
+      with:
+        version: ${{ github.event.inputs.version }}
       secrets:
         git_token: ${{ secrets.GITHUB_TOKEN }}
     
     build_operator:
-      uses: radondb/radondb-mysql-kubernetes/.github/workflows/build_operator_image.yml@main
+      uses: runkecheng/radondb-mysql-kubernetes/.github/workflows/build_operator_image.yml@main
       needs: update_release_draft
       with:
         image_tag: ${{ needs.update_release_draft.outputs.version }}
@@ -19,7 +26,7 @@ jobs:
         DOCKERHUB_TOKEN: ${{ secrets.DOCKERHUB_TOKEN }}
 
     build_sidecar:
-      uses: radondb/radondb-mysql-kubernetes/.github/workflows/build_sidecar_image.yml@main
+      uses: runkecheng/radondb-mysql-kubernetes/.github/workflows/build_sidecar_image.yml@main
       needs: update_release_draft
       with:
         image_tag: ${{ needs.update_release_draft.outputs.version }} 
@@ -28,7 +35,7 @@ jobs:
         DOCKERHUB_TOKEN: ${{ secrets.DOCKERHUB_TOKEN }}
 
     publish_chart:
-      uses: radondb/radondb-mysql-kubernetes/.github/workflows/publish_charts.yml@main
+      uses: runkecheng/radondb-mysql-kubernetes/.github/workflows/publish_charts.yml@main
       needs: update_release_draft
       with:
         version: ${{ needs.update_release_draft.outputs.version }}
