--- a/.github/workflows/build_sidecar_image.yml
+++ b/.github/workflows/build_sidecar_image.yml
@@ -35,17 +35,17 @@ jobs:
 
       - name: Build and push mysql57 sidecar
         uses: docker/build-push-action@v2
-        if: ${{ matrix.version }} == mysql57
+        if: ${{ matrix.version == 'mysql57' }}
         with:
           push: true
           file: Dockerfile.sidecar
-          tags: radondb/${{ matrix.version }}-sidecar:${{ inputs.image_tag }}
+          tags: runkecheng/${{ matrix.version }}-sidecar:${{ inputs.image_tag }}
 
       - name: Build and push mysql80 sidecar
         uses: docker/build-push-action@v2
-        if: ${{ matrix.version }} == mysql80
+        if: ${{ matrix.version == 'mysql80' }}
         with:
           push: true
           file: Dockerfile.sidecar
-          tags: radondb/${{ matrix.version }}-sidecar:${{ inputs.image_tag }}
+          tags: runkecheng/${{ matrix.version }}-sidecar:${{ inputs.image_tag }}
           build-args: XTRABACKUP_PKG=percona-xtrabackup-80
