--- a/config/samples/mysql_v1alpha1_mysqlcluster.yaml
+++ b/config/samples/mysql_v1alpha1_mysqlcluster.yaml
@@ -3,7 +3,7 @@ kind: MysqlCluster
 metadata:
   name: sample
 spec:
-  replicas: 3
+  replicas: 2
   mysqlVersion: "5.7"
   
   # the backupSecretName specify the secret file name which store S3 information,
@@ -66,7 +66,7 @@ spec:
 
   podPolicy:
     imagePullPolicy: IfNotPresent
-    sidecarImage: radondb/mysql57-sidecar:v2.2.0
+    sidecarImage: radondb/mysql57-sidecar:v2.2.0-alpha.1
     busyboxImage: busybox:1.32
 
     slowLogTail: false
